--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -1,4 +1,4 @@
-﻿<script type="text/javascript" src="Template.js"></script>
+<script type="text/javascript" src="Template.js"></script>
 <template>
     <style>
         .pluginWrapper {
@@ -100,7 +100,8 @@
 
                         function createCustomer() {
                             var customernamecheck = $('#ctl00_ctl00_cph_maintenance_globalSettingsRepeater_ctl01_value').val();
-
+                         
+                            $('#installPlugin').prop('disabled', true);
                             console.log("Customer contact value is", customernamecheck)
                             $('#errorText').text("");
                             if (customernamecheck === "" || customernamecheck === null) {
@@ -118,6 +119,7 @@
                                     "customerName": customernamecheck,
                                     "action": "createTeams"
                                 };
+                                $('#installPlugin').after("<br>Creating record, please wait...");
                                 $.ajax({
                                     type: "POST",
                                     url: that._getPluginPath() + "Handler.ashx",
@@ -125,6 +127,9 @@
                                     dataType: "json", // Expect JSON response
                                     data: postData,
                                     success: function (result) {
+                                        if (result.error) {
+                                            $('#errorText').text(result.error);
+                                        }
                                         console.log("Result is ", result)
                                         console.log("Secret key is ", result.secretkey);
                                         $('#ctl00_ctl00_cph_maintenance_globalSettingsRepeater_ctl00_value').val(result.guid);
@@ -138,7 +143,12 @@
                                         // } else {
                                         //     this._popup();
                                         // }
-                                    }.bind(this)
+                                    },
+                                    error: function (err) {
+                                        console.log("Error ", err);
+                                        $('#errorText').text(JSON.stringify(err));
+                                    }
+                                        .bind(this)
                                 });
                             }
                         }
@@ -285,7 +295,7 @@
                         var response = await msalInstance.loginPopup(loginRequest);
 
                         try {
-                            const authResp = await (await fetch("https://graph.microsoft.com/v1.0/users?$filter=userPrincipalName eq '" + "david.hancock@marval.com.au" + "'", {
+                            const authResp = await (await fetch("https://graph.microsoft.com/v1.0/users?$filter=userPrincipalName eq '" + Teams._contactEmail + "'", {
 
                                 method: "GET",
                                 headers: new Headers({
