--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -301,7 +301,10 @@
                             </div>
                             `);
 
-                            $("#chatbot-iframe").attr("src", "https://chatbot.marval.cloud/chatbot-client?aadObjectId=" + authResp.value[0].id + "&tenantId=" + tenantID);
+                            // Get contact name as the firstname in the contact field (split from "lastname, firstname")
+                            var contactName = $("#ctl00_cph_contact_name").val().split(", ").pop()
+
+                            $("#chatbot-iframe").attr("src", "https://chatbot.marval.cloud/chatbot-client?aadObjectId=" + authResp.value[0].id + "&tenantId=" + tenantID + "&contactName=" + contactName);
 
                             $("*").find(".chatbot-container").hide().fadeIn(300, function () {})
 
