Changed success message

--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -358,7 +358,7 @@
                     let iframe = $("#chatbot-iframe")
 
                     $("#TeamsError").remove();
-                    $("#TeamsPopup").append("<div id='TeamsError'><br><p style='color: green;'>Success!</p></div>")
+                    $("#TeamsPopup").append("<div id='TeamsError'><br><p style='color: green;'>Chatbot Connected</p></div>")
                     setTimeout(function () {
                         Teams._pluginWindow.hide();
                     }, 1000)
